--- a/Expressway Admin loin/Expressway Admin loin.csproj
+++ b/Expressway Admin loin/Expressway Admin loin.csproj
@@ -297,6 +297,8 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <DependentUpon>Database1.mdf</DependentUpon>
     </Content>
+    <None Include="Resources\Untitled design blue 4.jpg" />
+    <None Include="Resources\Welcome To The 32.jpg" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
