added user control forms

--- a/Expressway Admin loin/Expressway Admin loin.csproj
+++ b/Expressway Admin loin/Expressway Admin loin.csproj
@@ -63,6 +63,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Accident report.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Accident report.Designer.cs">
+      <DependentUpon>Accident report.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Fine report.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Fine report.Designer.cs">
+      <DependentUpon>Fine report.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -185,6 +197,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Accident report.resx">
+      <DependentUpon>Accident report.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Fine report.resx">
+      <DependentUpon>Fine report.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
